<resources>
    <string name="app_name">Grid Visualizer</string>
    <string name="solveBfs">BFS</string>
    <string name="solveDfs">DFS</string>
    <string name="reset">Reset</string>
    <string name="speed">Speed : </string>
    <string name="algorithm">Visualize :</string>
    <string name="solve">Start</string>
    <string name="exit">Exit</string>

    <string-array name="speed_array">
        <item>Fast</item>
        <item>Avg</item>
        <item>Slow</item>
    </string-array>

    <string-array name="algo_array">
        <item>BFS</item>
        <item>DFS</item>
    </string-array>
</resources>

